Fixing background color on safari

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  height: 100%;
 }
 body {
   margin: 0;
+  min-height: 100%;
+  background: #69b3d3;
 }
 article,
 aside,
